--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -9,7 +9,7 @@
         <h4 class="service-heading">{{name}}</h4>
         <p class="text-muted">{{description}}</p>
         <span class="text-left">
-            <a href="{{pathFor 'competitionPage'}}">to competition...</a>
+            <a href="{{pathFor 'competitionPage'}}">{{mf 'competition.to' 'Mee tsekkaan tää...'}}</a>
         </span>
     </div>
 </template>
