--- a/client/templates/includes/chat.html
+++ b/client/templates/includes/chat.html
@@ -25,9 +25,9 @@
         </div>
         <div class="panel-footer">
             <div class="input-group">
-                <input id="chat-btn-input" type="text" class="form-control input-sm" placeholder="Type your message here...">
+                <input id="chat-btn-input" type="text" class="form-control input-sm" placeholder="{{mf 'chat.send.placeholder' 'Viestisi...'}}">
                 <span class="input-group-btn">
-                    <button id="chat-send-button" class="btn btn-warning btn-sm">Send</button>
+                    <button id="chat-send-button" class="btn btn-warning btn-sm">{{mf 'chat.send.submit' 'Lähetä'}}</button>
                 </span>
             </div>
         </div>
