--- a/client/templates/login/login_jumbo.html
+++ b/client/templates/login/login_jumbo.html
@@ -1,3 +1,3 @@
 <template name="loginJumbo">
-    <h2>Please login from the header login form.</h2>
+    <h2>{{mf 'login.please.text' 'Kirjauduhan sisään tuolta ylhäältä.'}}</h2>
 </template>
