--- a/client/templates/application/loading.html
+++ b/client/templates/application/loading.html
@@ -1,3 +1,3 @@
 <template name="loading">
-    <div class="btn">Loading...</div>
+    <div class="btn">{{mf 'common.loading' 'Ladataan...'}}</div>
 </template>
