--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,28 +1,36 @@
 <template name="header">
     <nav class="navbar navbar-inverse navbar-custom navbar-fixed-top">
-        <div class="container">
+
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Levyraati</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a id="to-finnish">Suomeksi</a>
+                </li>
+                <li>
+                    <a id="to-english">In English</a>
+                </li>
+                {{> loginButtons}}
+            </ul>
+        </div>
+
+        <div class="container margin-left10">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                                aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/">Levyraati</a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            {{> loginButtons}}
-                        </ul>
-                    </div>
+                    {{> breadcrumb}}
                 </div>
             </div>
-            <div class="row">
-                {{> breadcrumb}}
-            </div>
         </div>
+
     </nav>
+
 </template>
