--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -14,10 +14,10 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a id="to-finnish">Suomeksi</a>
+                    <a id="to-finnish" href="javascript:void(0)">Suomeksi</a>
                 </li>
                 <li>
-                    <a id="to-english">In English</a>
+                    <a id="to-english" href="javascript:void(0)">In English</a>
                 </li>
                 {{> loginButtons}}
             </ul>
