--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -3,8 +3,9 @@ a{
 }
 
 a:hover {
-    text-decoration : none;
-    font-weight     : bold;
+    text-decoration: none;
+    font-weight: bold;
+    cursor: hand;
 }
 
 .spaceme {
