--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -226,7 +226,7 @@ a:hover {
 }
 
 footer {
-    padding: 10px 0;
+    padding: 3px 0 0 0;
     color: #EEEEEE;
     background-color: #000000;
     position: fixed;
