--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -3,6 +3,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <!-- Google Tag Manager -->
+        <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NSN9C4"
+                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-NSN9C4');</script>
+        <!-- End Google Tag Manager -->
+
         {{> sAlert}}
         {{> header}}
         <div class="jumbotron">
@@ -16,7 +26,7 @@
         <footer>
             <div class="container">
                 <p>{{mf 'footr.imp.by' 'Ohjelmointi '}}<strong>Henri Nybom 2015</strong></p>
-                <p>{{mf 'footr.fork' 'Hae mut '}}<a href="https://github.com/hnybom/levyraati">https://github.com/hnybom/levyraati</a></p>
+                <p>{{mf 'footr.fork' 'Hae mut '}}<a href="https://github.com/hnybom/levyraati">Musaraati</a></p>
             </div>
         </footer>
     </body>
