--- a/client/templates/includes/competition_form.html
+++ b/client/templates/includes/competition_form.html
@@ -1,8 +1,8 @@
 <template name="competitionForm">
     <div class="row">
         <div class="col-md-6">
-            <h1>Levyraati</h1>
-            <p>{{mf 'competition.form.text' 'Levyraati on...no levyraati. Kutsu ystäväsi kilpailuusi ja äänestäkää kimpassa paras biisi.'}}</p>
+            <h1>Musaraati</h1>
+            <p>{{mf 'competition.form.text' 'Musaraati on...no musaraati. Kutsu ystäväsi kilpailuusi ja äänestäkää kimpassa paras biisi.'}}</p>
         </div>
         <div class="col-md-6">
             <h2>{{mf 'competition.form.head' 'Luo uusi kilpailu'}}</h2>
