--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -55,7 +55,7 @@
             <div class="row spaceme">
                 <div class="col-md-6">
                     <h2>{{mf 'competition.add.song.title' 'Lisää biisi'}}</h2>
-                    <p>{{mf 'competition.add.song.text' 'Tästä voit lisätä oman hitti biisis mukaan kilpailuun. Lisääminen tukee spotify URI:ja ja youtbe hash:jä, joten antaa palaa.'}}
+                    <p>{{mf 'competition.add.song.text' 'Tästä voit lisätä oman hittibiisisi mukaan kilpailuun. Lisääminen tukee spotify URI:a ja youtube hash-koodeja, joten antaa palaa.'}}
                     </p>
                 </div>
                 <div class="col-md-6">
