--- a/client/stylesheets/rating.css
+++ b/client/stylesheets/rating.css
@@ -35,3 +35,7 @@
 .starRating:not(:hover) > :checked ~ label:before{
     opacity : 1;
 }
+
+.rating-menu .checked {
+    background-color: #2B77BA;
+}
