--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -30,6 +30,8 @@
                         </div>
                     </ul>
                 </div>
+                <h2>{{competition.name}}</h2>
+                <p>{{competition.description}}</p>
             </div>
 
             <div class="col-md-6">
