--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,15 +1,13 @@
 <template name="competitionItem">
     <div class="col-md-4 margin-bottom text-justify {{competitionOwnerStyle _id}}">
-        <div class="text-center">
-            <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-microphone fa-stack-1x fa-inverse"></i>
-            </span>
-        </div>
-        <h4 class="service-heading">{{name}}</h4>
-        <p class="text-muted">{{description}}</p>
-        <span class="text-left">
-            <a href="{{pathFor 'competitionPage'}}">{{mf 'competition.to' 'Mee tsekkaan tää...'}}</a>
-        </span>
+        <a class="no-link thumbnail" href="{{pathFor 'competitionPage'}}">
+            <div class="text-center">
+
+            </div>
+            <div class="pad30">
+                <h4 class="service-heading">{{name}}</h4>
+                <p class="text-muted">{{description}}</p>
+            </div>
+        </a>
     </div>
 </template>
