--- a/client/stylesheets/common.scss
+++ b/client/stylesheets/common.scss
@@ -18,6 +18,15 @@ h3 {
   padding: 30px;
 }
 
+.pad15 {
+  padding: 15px;
+}
+
+.thin-border {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
 .no-link {
 
 }
