--- a/client/templates/includes/song_player.html
+++ b/client/templates/includes/song_player.html
@@ -1,15 +1,17 @@
 <template name="songPlayer">
     {{#if this.uri}}
-    <div class="songItem">
         {{#if isSpotify this.uri}}
-            <iframe src="https://embed.spotify.com/?uri={{uri}}" width="600" height="480"
-                    frameborder="0" allowtransparency="true"></iframe>
+            <div class="songItem spotify">
+                <iframe class="spotify" src="https://embed.spotify.com/?uri={{uri}}" width="100%" height="100px"
+                        frameborder="0" allowtransparency="true"></iframe>
+            </div>
         {{else}}
-            <iframe id="ytplayer" type="text/html" width="650" height="400"
-                    src="http://www.youtube.com/embed/{{uri}}?autoplay=0"
-                    frameborder="0">
-            </iframe>
+            <div class="songItem youtube">
+                <iframe class="youtube" id="ytplayer" type="text/html" width="100%" height="100%"
+                        src="http://www.youtube.com/embed/{{uri}}?autoplay=0"
+                        frameborder="0">
+                </iframe>
+            </div>
         {{/if}}
-    </div>
     {{/if}}
 </template>
