--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -1,5 +1,5 @@
 <template name="songItem">
-    <div class="col-md-4">
+    <div class="col-sm-6">
         <div class="thin-border song-card margin-bottom flip-container">
             <div class="flipper">
                 <div class="front pad15">
@@ -11,57 +11,60 @@
 
                     <div class="total-rating-heading"><strong>{{ mf 'competition.end.popup.rating' 'Tulos'}}</strong></div>
                     <div class="total-rating">{{averageRating this}}</div>
-                    {{#unless isOwner this}}
-                        <form class="main form rating-form">
-                            <!-- Split button -->
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    {{mf 'song.rating' 'Sinun mielipiteesi'}} <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu rating-menu">
-                                    {{#each loopCount 10}}
-                                        <li class="{{ratingChecked this.val ..}}"><a href="javascript:void(0)" data-rating="{{this.val}}">{{this.val}}</a></li>
-                                    {{/each}}
-                                </ul>
-                            </div>
-                        </form>
-                    {{/unless}}
 
                     <div class="button-col">
+                        {{#unless isOwner this}}
+                            <form class="main form rating-form">
+                                <!-- Split button -->
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        {{mf 'song.rating' 'Sinun mielipiteesi'}} <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu rating-menu">
+                                        {{#each loopCount 10}}
+                                            <li class="{{ratingChecked this.val ..}}"><a href="javascript:void(0)" data-rating="{{this.val}}">{{this.val}}</a></li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                            </form>
+                        {{/unless}}
                         {{#if isOkToEdit}}
                             <a class="edit-song btn btn-primary" data-songid="{{this._id}}">{{mf 'song.edit' 'Muokkaa'}}</a>
                         {{/if}}
-                        <a class="btn btn-primary see-all-song-results">{{mf 'competition.end.results' 'Katso kaikki tulokset'}}</a>
+                        <a class="btn btn-default see-all-song-results">{{mf 'competition.end.results' 'Katso kaikki tulokset'}}</a>
                     </div>
                 </div>
                 <div class="back pad15">
                     <h4>{{mf 'song.ratings' 'Tulokset'}}</h4>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>{{mf 'song.ratings.name' 'Nimi'}}</th>
-                            <th>{{mf 'song.ratings.rating' 'Arvosana'}}</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {{#each getRatingsForThisSong this}}
+                    <div class="table-container">
+                        <table class="table">
+                            <thead>
                             <tr>
-                                <td>{{inc @index}}</td>
-                                <td>{{getUserName this.userId}}</td>
-                                <td>
-                                    {{this.rating}}
-                                </td>
+                                <th>#</th>
+                                <th>{{mf 'song.ratings.name' 'Nimi'}}</th>
+                                <th>{{mf 'song.ratings.rating' 'Arvosana'}}</th>
                             </tr>
-                        {{/each}}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                            {{#each getRatingsForThisSong this}}
+                                <tr>
+                                    <td>{{inc @index}}</td>
+                                    <td>{{getUserName this.userId}}</td>
+                                    <td>
+                                        {{this.rating}}
+                                    </td>
+                                </tr>
+                            {{/each}}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="spaceme"></div>
                     <span class="average-row"><strong>{{mf 'song.ratings.average' 'Yhteensä'}} {{averageRating this}}</strong></span>
                     <div class=" button-col">
                         {{#if isOkToEdit}}
                             <a class="edit-song btn btn-primary" data-songid="{{this._id}}">{{mf 'song.edit' 'Muokkaa'}}</a>
                         {{/if}}
-                        <a class="btn btn-primary see-all-song-results">{{mf 'common.back' 'Takaisin'}}</a>
+                        <a class="btn btn-default see-all-song-results">{{mf 'common.back' 'Takaisin'}}</a>
                     </div>
                 </div>
             </div>
