some tweaks to front page

--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,5 +1,5 @@
 <template name="competitionItem">
-    <div class="col-md-4 margin-bottom text-justify {{competitionOwnerStyle _id}}">
+    <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom text-justify {{competitionOwnerStyle _id}}">
         <a class="no-link thumbnail" href="{{pathFor 'competitionPage'}}">
             <div class="text-center">
 
