--- a/client/stylesheets/common.scss
+++ b/client/stylesheets/common.scss
@@ -11,7 +11,9 @@ h3 {
 
 .thumbnail {
   height: 400px;
+  background-color: #FFFFFF;
   overflow: hidden;
+  box-shadow: 0px 1px 5px 0px rgba(204,204,12,1);
 }
 
 .pad30 {
