--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -16,7 +16,7 @@
                         {{#unless isOwner this}}
                             <form class="main form rating-form">
                                 <!-- Split button -->
-                                <div class="btn-group">
+                                <div class="btn-group dropup">
                                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         {{mf 'song.rating' 'Sinun mielipiteesi'}} <span class="caret"></span>
                                     </button>
