--- a/client/stylesheets/song.scss
+++ b/client/stylesheets/song.scss
@@ -39,6 +39,10 @@
   color: #EEEEEE;
 }
 
+.song-title {
+  font-size: 16px;
+}
+
 .total-rating-heading {
   text-align: center;
   font-size: 30px;
